main page, credits, images and styles

--- a/pages/credits/index.html
+++ b/pages/credits/index.html
@@ -8,28 +8,27 @@
 
     <link rel="icon" href="/logo.png" />
     <link
-      href="https://fonts.googleapis.com/css?family=Signika+Negative:300"
+      href="https//fonts.googleapis.com/css?family=Signika+Negative:300"
       rel="stylesheet"
       type="text/css"
     />
-    <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="stylesheet" href="./styles/utils.css" />
-    <link rel="stylesheet" href="./styles/components/menu.css" />
+    <link rel="stylesheet" href="../../styles/style.css" />
+    <link rel="stylesheet" href="../../styles/utils.css" />
+    <link rel="stylesheet" href="../../styles/components/credits.css" />
   </head>
   <body>
     <div class="logo">
       <img src="/logo.png" alt="Rowerowe Narty - logo" />
     </div>
 
-    <div class="container">
-      <ul class="container__list">
-        <li class="btn"><a href="./pages/play/index.html">play</a></li>
-        <li class="btn"><a href="#">store</a></li>
-        <li class="btn"><a href="#">options</a></li>
-        <li class="btn"><a href="./pages/credits/index.html">credits</a></li>
-      </ul>
+    <div class="creators">
+      <p>Konrad Ciesielski - CEO</p>
     </div>
 
-    <script src="./src/jquery-3.6.1.min.js"></script>
+    <div class="container">
+      <ul class="container__list">
+        <li class="btn"><a href="../../index.html">back</a></li>
+      </ul>
+    </div>
   </body>
 </html>
