--- a/pages/play/index.html
+++ b/pages/play/index.html
@@ -32,6 +32,7 @@
     <canvas></canvas>
 
     <script src="../../src/jquery-3.6.1.min.js"></script>
+    <script src="../../src/classes/Sprite.js"></script>
     <script src="../../src/classes/Player.js"></script>
     <script src="../../src/eventListeners.js"></script>
     <script src="../../src/game.js"></script>
