--- a/pages/play/index.html
+++ b/pages/play/index.html
@@ -50,6 +50,7 @@
     <script src="../../src/classes/Sprite.js"></script>
     <script src="../../src/classes/Player.js"></script>
     <script src="../../src/classes/Obstacle.js"></script>
+    <script src="../../src/classes/Police.js"></script>
     <script src="../../src/eventListeners.js"></script>
     <script src="../../src/checkCollisions.js"></script>
     <script src="../../src/generate.js"></script>
