generate boost effects

--- a/index.html
+++ b/index.html
@@ -23,13 +23,11 @@
 
     <div class="container">
       <ul class="container__list">
-        <li class="btn"><a href="./pages/play/index.html">play</a></li>
-        <li class="btn"><a href="#">store</a></li>
-        <li class="btn"><a href="#">options</a></li>
-        <li class="btn"><a href="./pages/credits/index.html">credits</a></li>
+        <a href="./pages/play/index.html"><li class="btn">play</li></a>
+        <a href="#"><li class="btn">store</li></a>
+        <a href="#"> <li class="btn">options</li></a>
+        <a href="./pages/credits/index.html"><li class="btn">credits</li></a>
       </ul>
     </div>
-
-    <script src="./src/jquery-3.6.1.min.js"></script>
   </body>
 </html>
