--- a/pages/play/index.html
+++ b/pages/play/index.html
@@ -46,12 +46,13 @@
       <p>Click to <span class="play-again">play again</span>.</p>
     </div>
 
-    <script src="../../src/jquery-3.6.1.min.js"></script>
     <script src="../../src/classes/Sprite.js"></script>
     <script src="../../src/classes/Player.js"></script>
     <script src="../../src/classes/Obstacle.js"></script>
     <script src="../../src/classes/Police.js"></script>
+    <script src="../../src/classes/BoostEffect.js"></script>
     <script src="../../src/eventListeners.js"></script>
+    <script src="../../src/effects.js"></script>
     <script src="../../src/checkCollisions.js"></script>
     <script src="../../src/generate.js"></script>
     <script src="../../src/game.js"></script>
