--- a/pages/play/index.html
+++ b/pages/play/index.html
@@ -51,10 +51,12 @@
     <script src="../../src/classes/Obstacle.js"></script>
     <script src="../../src/classes/Police.js"></script>
     <script src="../../src/classes/BoostEffect.js"></script>
+    <script src="../../src/classes/Bullet.js"></script>
     <script src="../../src/eventListeners.js"></script>
     <script src="../../src/effects.js"></script>
     <script src="../../src/checkCollisions.js"></script>
     <script src="../../src/generate.js"></script>
     <script src="../../src/game.js"></script>
+    <script src="../../src/main.js"></script>
   </body>
 </html>
