--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <ul class="container__list">
         <a href="./pages/play/index.html"><li class="btn">play</li></a>
         <a href="#"><li class="btn">store</li></a>
-        <a href="#"> <li class="btn">options</li></a>
+        <a href="./pages/donate/index.html"> <li class="btn">donate</li></a>
         <a href="./pages/credits/index.html"><li class="btn">credits</li></a>
       </ul>
     </div>
