--- a/pages/donate/index.html
+++ b/pages/donate/index.html
@@ -8,24 +8,34 @@
 
     <link rel="icon" href="/logo.png" />
     <link
-      href="https//fonts.googleapis.com/css?family=Signika+Negative:300"
+      href="https://fonts.googleapis.com/css?family=Signika+Negative:300"
       rel="stylesheet"
       type="text/css"
     />
     <link rel="stylesheet" href="../../styles/style.css" />
     <link rel="stylesheet" href="../../styles/utils.css" />
-    <link rel="stylesheet" href="../../styles/components/credits.css" />
+    <link rel="stylesheet" href="../../styles/components/menu.css" />
+    <link rel="stylesheet" href="../../styles/components/donate.css" />
   </head>
   <body>
     <div class="logo">
       <img src="/logo.png" alt="Rowerowe Narty - logo" />
     </div>
 
-    <div class="creators">
-      <p>Konrad Ciesielski - CEO</p>
-    </div>
-
     <div class="container">
+      <div class="container__donate">
+        <p>
+          Here's my account number:
+          <span class="acc-number">PL39109028350000000146579429</span>.
+        </p>
+        <p>
+          And there is my
+          <a href="https://www.paypal.com/paypalme/megakoks" target="_blank"
+            ><span class="paypal">PayPal</span></a
+          >.
+        </p>
+        <p class="thx">THX FOR MONEY <span class="heart">❤</span></p>
+      </div>
       <ul class="container__list">
         <a href="../../index.html"><li class="btn">back</li></a>
       </ul>
