boosts effect on navbar ui

--- a/pages/play/index.html
+++ b/pages/play/index.html
@@ -24,7 +24,23 @@
         /></a>
       </div>
       <div class="nav__ui">
-        <ul class="ui">
+        <ul class="ui__boosts ui__list">
+          <li class="ui__element">
+            <img src="/speed.png" alt="Speed boost" class="boost speed" />
+          </li>
+          <li class="ui__element pistolAmmo">
+            <img src="/pistol.png" alt="Pistol" class="boost pistol" />
+            <sub class="ammo"></sub>
+          </li>
+          <li class="ui__element">
+            <img src="/multiplier.png" alt="Score multiplier" class="boost multi" />
+          </li>
+          <li class="ui__element">
+            <img src="/shield.png" alt="Shield" class="boost shield" />
+          </li>
+        </ul>
+
+        <ul class="ui__score ui__list">
           <li class="ui__element">Score: <span class="score"></span></li>
           <li class="ui__element">
             Best Score: <span class="best-score"></span>
