--- a/pages/play/index.html
+++ b/pages/play/index.html
@@ -25,18 +25,26 @@
       </div>
       <div class="nav__ui">
         <ul class="ui__boosts ui__list">
-          <li class="ui__element">
+          <li class="ui__element ui__boost">
             <img src="/speed.png" alt="Speed boost" class="boost speed" />
           </li>
-          <li class="ui__element pistolAmmo">
+          <li class="ui__element ui__boost">
             <img src="/pistol.png" alt="Pistol" class="boost pistol" />
-            <sub class="ammo"></sub>
+            <sup class="ammo"></sup>
           </li>
-          <li class="ui__element">
-            <img src="/multiplier.png" alt="Score multiplier" class="boost multi" />
+          <li class="ui__element ui__boost">
+            <img
+              src="/multiplier.png"
+              alt="Score multiplier"
+              class="boost multi"
+            />
           </li>
-          <li class="ui__element">
+          <li class="ui__element ui__boost">
             <img src="/shield.png" alt="Shield" class="boost shield" />
+          </li>
+          <li class="ui__element ui__boost">
+            <img src="/coin.png" alt="Coins" class="boost coin" />
+            <sup class="coins"></sup>
           </li>
         </ul>
 
