--- a/pages/store/index.html
+++ b/pages/store/index.html
@@ -12,9 +12,10 @@
       rel="stylesheet"
       type="text/css"
     />
-    <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="stylesheet" href="./styles/utils.css" />
-    <link rel="stylesheet" href="./styles/components/menu.css" />
+    <link rel="stylesheet" href="../../styles/style.css" />
+    <link rel="stylesheet" href="../../styles/utils.css" />
+    <link rel="stylesheet" href="../../styles/components/menu.css" />
+    <link rel="stylesheet" href="../../styles/components/store.css" />
   </head>
   <body>
     <div class="logo">
@@ -22,11 +23,11 @@
     </div>
 
     <div class="container">
+      <div class="container__store">
+        <p>I'm still working on skins</p>
+      </div>
       <ul class="container__list">
-        <a href="./pages/play/index.html"><li class="btn">play</li></a>
-        <a href="./pages/store/index.html"><li class="btn">store</li></a>
-        <a href="./pages/donate/index.html"> <li class="btn">donate</li></a>
-        <a href="./pages/credits/index.html"><li class="btn">credits</li></a>
+        <a href="../../index.html"><li class="btn">back</li></a>
       </ul>
     </div>
   </body>
