--- a/pages/credits/index.html
+++ b/pages/credits/index.html
@@ -14,6 +14,7 @@
     />
     <link rel="stylesheet" href="../../styles/style.css" />
     <link rel="stylesheet" href="../../styles/utils.css" />
+    <link rel="stylesheet" href="../../styles/components/menu.css" />
     <link rel="stylesheet" href="../../styles/components/credits.css" />
   </head>
   <body>
