--- a/play.html
+++ b/play.html
@@ -12,14 +12,14 @@
       rel="stylesheet"
       type="text/css"
     />
-    <link rel="stylesheet" href="../../styles/style.css" />
-    <link rel="stylesheet" href="../../styles/utils.css" />
-    <link rel="stylesheet" href="../../styles/components/user_interface.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/utils.css" />
+    <link rel="stylesheet" href="./styles/components/user_interface.css" />
   </head>
   <body>
     <nav class="navbar">
       <div class="nav__logo">
-        <a href="../../index.html"
+        <a href="index.html"
           ><img src="/logo.png" alt="Rowerowe Narty - logo"
         /></a>
       </div>
@@ -70,17 +70,18 @@
       <p>Click to <span class="play-again">play again</span>.</p>
     </div>
 
-    <script src="../../src/classes/Sprite.js"></script>
-    <script src="../../src/classes/Player.js"></script>
-    <script src="../../src/classes/Obstacle.js"></script>
-    <script src="../../src/classes/Police.js"></script>
-    <script src="../../src/classes/BoostEffect.js"></script>
-    <script src="../../src/classes/Bullet.js"></script>
-    <script src="../../src/eventListeners.js"></script>
-    <script src="../../src/effects.js"></script>
-    <script src="../../src/checkCollisions.js"></script>
-    <script src="../../src/generate.js"></script>
-    <script src="../../src/game.js"></script>
-    <script src="../../src/main.js"></script>
+    <script src="./src/classes/Sprite.js"></script>
+    <script src="./src/classes/Player.js"></script>
+    <script src="./src/classes/Obstacle.js"></script>
+    <script src="./src/classes/Police.js"></script>
+    <script src="./src/classes/BoostEffect.js"></script>
+    <script src="./src/classes/Bullet.js"></script>
+    <script src="./src/eventListeners.js"></script>
+    <script src="./src/effects.js"></script>
+    <script src="./src/checkCollisions.js"></script>
+    <script src="./src/generate.js"></script>
+    <script src="./src/game.js"></script>
+    <script src="./src/music.js"></script>
+    <script src="./src/main.js"></script>
   </body>
 </html>
