--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       </section>
     </main>
 
-    <script src="./src/music.js"></script>
-    <script src="./src/changeSection.js"></script>
+    <script src="./src/utils/music.js"></script>
+    <script src="./src/utils/changeSection.js"></script>
   </body>
 </html>
