--- a/play.html
+++ b/play.html
@@ -76,12 +76,12 @@
     <script src="./src/classes/Police.js"></script>
     <script src="./src/classes/BoostEffect.js"></script>
     <script src="./src/classes/Bullet.js"></script>
-    <script src="./src/eventListeners.js"></script>
-    <script src="./src/effects.js"></script>
-    <script src="./src/checkCollisions.js"></script>
-    <script src="./src/generate.js"></script>
-    <script src="./src/game.js"></script>
-    <script src="./src/music.js"></script>
+    <script src="./src/utils/eventListeners.js"></script>
+    <script src="./src/utils/effects.js"></script>
+    <script src="./src/utils/checkCollisions.js"></script>
+    <script src="./src/utils/generate.js"></script>
+    <script src="./src/utils/game.js"></script>
+    <script src="./src/utils/music.js"></script>
     <script src="./src/main.js"></script>
   </body>
 </html>
