--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rowerowe Narty</title>
 
-    <link rel="icon" href="/logo.png" />
+    <link rel="icon" href="/img/logo.png" />
     <link
       href="https://fonts.googleapis.com/css?family=Signika+Negative:300"
       rel="stylesheet"
@@ -21,7 +21,7 @@
   </head>
   <body>
     <div class="logo">
-      <img src="/logo.png" alt="Rowerowe Narty - logo" />
+      <img src="/img/logo.png" alt="Rowerowe Narty - logo" />
     </div>
 
     <main>
@@ -77,7 +77,7 @@
       </section>
     </main>
 
-    <script src="./src/utils/music.js"></script>
-    <script src="./src/utils/changeSection.js"></script>
+    <script src="/src/utils/music.js"></script>
+    <script src="/src/utils/changeSection.js"></script>
   </body>
 </html>
