shooting system and keybindings section

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/utils.css" />
     <link rel="stylesheet" href="./styles/components/animate-logo.css" />
+    <link rel="stylesheet" href="./styles/components/keybindings.css" />
     <link rel="stylesheet" href="./styles/components/store.css" />
     <link rel="stylesheet" href="./styles/components/donate.css" />
     <link rel="stylesheet" href="./styles/components/credits.css" />
@@ -28,9 +29,49 @@
       <section id="sectionMain" class="container__section">
         <ul class="container__list">
           <li id="play" class="btn">play</li>
+          <li id="keybindings" class="btn">key bindings</li>
           <li id="store" class="btn">store</li>
           <li id="donate" class="btn">donate</li>
           <li id="credits" class="btn">credits</li>
+        </ul>
+      </section>
+
+      <section id="sectionKeybindings" class="container__section">
+        <div class="section__keybindings">
+          <ul class="keys__movement">
+            <h3>Movement -</h3>
+            <li class="keys__element">
+              <img src="/img/keyW.png" alt="keyW" />
+            </li>
+            <li class="keys__element">
+              <img src="/img/keyA.png" alt="keyA" />
+            </li>
+            <li class="keys__element">
+              <img src="/img/keyS.png" alt="keyS" />
+            </li>
+            <li class="keys__element">
+              <img src="/img/keyD.png" alt="keyD" />
+            </li>
+          </ul>
+
+          <ul class="keys__movement">
+            <h3>Shooting -</h3>
+            <li class="keys__element">
+              <img src="/img/keyArrowUp.png" alt="keyArrowUp" />
+            </li>
+            <li class="keys__element">
+              <img src="/img/keyArrowDown.png" alt="keyArrowDown" />
+            </li>
+            <li class="keys__element">
+              <img src="/img/keyArrowLeft.png" alt="keyArrowLeft" />
+            </li>
+            <li class="keys__element">
+              <img src="/img/keyArrowRight.png" alt="keyArrowRight" />
+            </li>
+          </ul>
+        </div>
+        <ul class="container__list">
+          <li class="btn">back</li>
         </ul>
       </section>
 
