--- a/public/play.html
+++ b/public/play.html
@@ -51,7 +51,7 @@
         <ul class="ui__score ui__list">
           <li class="ui__element">Score: <span class="score"></span></li>
           <li class="ui__element">
-            Best Score: <span class="best-score"></span>
+            The Best Score: <span class="best-score"></span>
           </li>
         </ul>
       </div>
