--- a/public/play.html
+++ b/public/play.html
@@ -70,18 +70,6 @@
       <p>Click to <span class="play-again">play again</span>.</p>
     </div>
 
-    <script src="./src/classes/Sprite.js"></script>
-    <script src="./src/classes/Player.js"></script>
-    <script src="./src/classes/Obstacle.js"></script>
-    <script src="./src/classes/Police.js"></script>
-    <script src="./src/classes/BoostEffect.js"></script>
-    <script src="./src/classes/Bullet.js"></script>
-    <script src="./src/utils/eventListeners.js"></script>
-    <script src="./src/utils/effects.js"></script>
-    <script src="./src/utils/checkCollisions.js"></script>
-    <script src="./src/utils/generate.js"></script>
-    <script src="./src/utils/game.js"></script>
-    <script src="./src/utils/music.js"></script>
-    <script src="./src/main.js"></script>
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
