moved src folder from public

--- a/public/play.html
+++ b/public/play.html
@@ -70,6 +70,6 @@
       <p>Click to <span class="play-again">play again</span>.</p>
     </div>
 
-    <script type="module" src="./src/main.js"></script>
+    <script type="module" src="../src/main.js"></script>
   </body>
 </html>
