--- a/public/play.html
+++ b/public/play.html
@@ -26,24 +26,24 @@
       <div class="nav__ui">
         <ul class="ui__boosts ui__list">
           <li class="ui__element ui__boost">
-            <img src="/img/speed.png" alt="Speed boost" class="boost speed" />
+            <img src="/img/boosts/speed.png" alt="Speed boost" class="boost speed" />
           </li>
           <li class="ui__element ui__boost">
-            <img src="/img/pistol.png" alt="Pistol" class="boost pistol" />
+            <img src="/img/boosts/pistol.png" alt="Pistol" class="boost pistol" />
             <sup class="ammo"></sup>
           </li>
           <li class="ui__element ui__boost">
             <img
-              src="/img/multiplier.png"
+              src="/img/boosts/multiplier.png"
               alt="Score multiplier"
               class="boost multi"
             />
           </li>
           <li class="ui__element ui__boost">
-            <img src="/img/shield.png" alt="Shield" class="boost shield" />
+            <img src="/img/boosts/shield.png" alt="Shield" class="boost shield" />
           </li>
           <li class="ui__element ui__boost">
-            <img src="/img/coin.png" alt="Coins" class="boost coin" />
+            <img src="/img/boosts/coin.png" alt="Coins" class="boost coin" />
             <sup class="coins"></sup>
           </li>
         </ul>
