--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rowerowe Narty</title>
 
-    <link rel="icon" href="/img/logo.png" />
+    <link rel="icon" href="./img/logo.png" />
     <link
       href="https://fonts.googleapis.com/css?family=Signika+Negative:300"
       rel="stylesheet"
@@ -22,7 +22,7 @@
   </head>
   <body>
     <div class="logo">
-      <img src="/img/logo.png" alt="Rowerowe Narty - logo" loading="lazy" />
+      <img src="./img/logo.png" alt="Rowerowe Narty - logo" loading="lazy" />
     </div>
 
     <main>
@@ -43,32 +43,32 @@
           <ul class="keys">
             <h3>Movement -</h3>
             <li class="keys__element">
-              <img src="/img/keys/keyW.png" alt="keyW" />
+              <img src="./img/keys/keyW.png" alt="keyW" />
             </li>
             <li class="keys__element">
-              <img src="/img/keys/keyA.png" alt="keyA" />
+              <img src="./img/keys/keyA.png" alt="keyA" />
             </li>
             <li class="keys__element">
-              <img src="/img/keys/keyS.png" alt="keyS" />
+              <img src="./img/keys/keyS.png" alt="keyS" />
             </li>
             <li class="keys__element">
-              <img src="/img/keys/keyD.png" alt="keyD" />
+              <img src="./img/keys/keyD.png" alt="keyD" />
             </li>
           </ul>
 
           <ul class="keys">
             <h3>Shooting -</h3>
             <li class="keys__element">
-              <img src="/img/keys/keyArrowUp.png" alt="keyArrowUp" />
+              <img src="./img/keys/keyArrowUp.png" alt="keyArrowUp" />
             </li>
             <li class="keys__element">
-              <img src="/img/keys/keyArrowDown.png" alt="keyArrowDown" />
+              <img src="./img/keys/keyArrowDown.png" alt="keyArrowDown" />
             </li>
             <li class="keys__element">
-              <img src="/img/keys/keyArrowLeft.png" alt="keyArrowLeft" />
+              <img src="./img/keys/keyArrowLeft.png" alt="keyArrowLeft" />
             </li>
             <li class="keys__element">
-              <img src="/img/keys/keyArrowRight.png" alt="keyArrowRight" />
+              <img src="./img/keys/keyArrowRight.png" alt="keyArrowRight" />
             </li>
           </ul>
         </div>
@@ -102,7 +102,6 @@
       <!-- Store section -->
       <section id="sectionStore" class="container__section">
         <div class="container__store">
-          <!-- TODO: Skins needs to be generated -->
           <div class="skins"></div>
           </div>
           <p style="font-size: var(--size-lg); text-align: center;">
@@ -147,9 +146,6 @@
       </section>
     </main>
 
-    <script src="/src/utils/music.js"></script>
-    <script src="/src/utils/changeSection.js"></script>
-    <script src="/src/utils/skins.js"></script>
-    <script src="/src/utils/store.js"></script>
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
