--- a/public/play.html
+++ b/public/play.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rowerowe Narty</title>
 
-    <link rel="icon" href="/img/logo.png" />
+    <link rel="icon" href="./img/logo.png" />
     <link
       href="https://fonts.googleapis.com/css?family=Signika+Negative:300"
       rel="stylesheet"
@@ -20,30 +20,30 @@
     <nav class="navbar">
       <div class="nav__logo">
         <a href="index.html"
-          ><img src="/img/logo.png" alt="Rowerowe Narty - logo"
+          ><img src="./img/logo.png" alt="Rowerowe Narty - logo"
         /></a>
       </div>
       <div class="nav__ui">
         <ul class="ui__boosts ui__list">
           <li class="ui__element ui__boost">
-            <img src="/img/boosts/speed.png" alt="Speed boost" class="boost speed" />
+            <img src="./img/boosts/speed.png" alt="Speed boost" class="boost speed" />
           </li>
           <li class="ui__element ui__boost">
-            <img src="/img/boosts/pistol.png" alt="Pistol" class="boost pistol" />
+            <img src="./img/boosts/pistol.png" alt="Pistol" class="boost pistol" />
             <sup class="ammo"></sup>
           </li>
           <li class="ui__element ui__boost">
             <img
-              src="/img/boosts/multiplier.png"
+              src="./img/boosts/multiplier.png"
               alt="Score multiplier"
               class="boost multi"
             />
           </li>
           <li class="ui__element ui__boost">
-            <img src="/img/boosts/shield.png" alt="Shield" class="boost shield" />
+            <img src="./img/boosts/shield.png" alt="Shield" class="boost shield" />
           </li>
           <li class="ui__element ui__boost">
-            <img src="/img/boosts/coin.png" alt="Coins" class="boost coin" />
+            <img src="./img/boosts/coin.png" alt="Coins" class="boost coin" />
             <sup class="coins"></sup>
           </li>
         </ul>
