--- a/index.html
+++ b/index.html
@@ -12,13 +12,6 @@
       rel="stylesheet"
       type="text/css"
     />
-    <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="stylesheet" href="./styles/utils.css" />
-    <link rel="stylesheet" href="./styles/components/animate-logo.css" />
-    <link rel="stylesheet" href="./styles/components/keybindings.css" />
-    <link rel="stylesheet" href="./styles/components/store.css" />
-    <link rel="stylesheet" href="./styles/components/donate.css" />
-    <link rel="stylesheet" href="./styles/components/credits.css" />
   </head>
   <body>
     <div class="logo">
@@ -41,57 +34,93 @@
       <section id="sectionKeybindings" class="container__section">
         <div class="section__keybindings">
           <ul class="keys">
-            <h3>Movement -</h3>
-            <li class="keys__element">
-              <img src="./img/keys/keyW.png" alt="keyW" />
-            </li>
-            <li class="keys__element">
-              <img src="./img/keys/keyA.png" alt="keyA" />
-            </li>
-            <li class="keys__element">
-              <img src="./img/keys/keyS.png" alt="keyS" />
-            </li>
-            <li class="keys__element">
-              <img src="./img/keys/keyD.png" alt="keyD" />
-            </li>
+            <h3>Movement:</h3>
+            <li class="keys__element">W</li>
+            <li class="keys__element">S</li>
+            <li class="keys__element">A</li>
+            <li class="keys__element">D</li>
           </ul>
 
           <ul class="keys">
-            <h3>Shooting -</h3>
+            <h3>Shooting:</h3>
             <li class="keys__element">
-              <img src="./img/keys/keyArrowUp.png" alt="keyArrowUp" />
+              &uarr;
+              <!-- Arrow Up -->
             </li>
             <li class="keys__element">
-              <img src="./img/keys/keyArrowDown.png" alt="keyArrowDown" />
+              &darr;
+              <!-- Arrow Down -->
             </li>
             <li class="keys__element">
-              <img src="./img/keys/keyArrowLeft.png" alt="keyArrowLeft" />
+              &larr;
+              <!-- Arrow Left -->
             </li>
             <li class="keys__element">
-              <img src="./img/keys/keyArrowRight.png" alt="keyArrowRight" />
+              &rarr;
+              <!-- Arrow Right -->
             </li>
           </ul>
+          <ul class="container__list">
+            <li id="play" class="btn">play</li>
+          </ul>
         </div>
-        <ul class="container__list">
-          <li id="play" class="btn">play</li>
-        </ul>
       </section>
 
       <!-- Account section (user, ranking) -->
       <section id="sectionAccount" class="container__section">
-        <div class="container__account"></div>
-        <ul class="container__list">
-          <li id="stats" class="btn">your stats</li>
-          <li id="ranking" class="btn">ranking</li>
-        </ul>
+        <div class="container__account">
+          <ul class="container__list">
+            <li id="login" class="btn">log in</li>
+            <li id="stats" class="btn">your stats</li>
+            <li id="ranking" class="btn">ranking</li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- Login/Registration section -->
+      <section id="sectionLogin" class="container__section">
+        <div class="container__login">
+          <div class="form-container sign-up">
+            <form>
+              <h1>Create Account</h1>
+              <input name="username" type="text" placeholder="Username" />
+              <input name="password" type="password" placeholder="Password" />
+              <button class="signUp">Sign Up</button>
+            </form>
+          </div>
+
+          <div class="form-container sign-in">
+            <form>
+              <h1>Sign In</h1>
+              <input name="username" type="text" placeholder="Username" />
+              <input name="password" type="password" placeholder="Password" />
+              <button class="signIn">Sign In</button>
+            </form>
+          </div>
+
+          <div class="toggle-container">
+            <div class="toggle">
+              <div class="toggle-panel toggle-left">
+                <h1>Welcome Back!</h1>
+                <p>Enter your details and go to play!</p>
+                <button class="hidden" id="loginBtn">Sign In</button>
+              </div>
+
+              <div class="toggle-panel toggle-right">
+                <h1>Hello My Friend!</h1>
+                <p>Creating this account is the best decision in your life!</p>
+                <button class="hidden" id="registerBtn">Sign Up</button>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
 
       <!-- User stats (account sub-section) -->
       <section id="sectionStats" class="container__section">
-        <div class="container__stats"></div>
-        <ul class="container__list">
-          <li class="btn">zaloguj</li>
-        </ul>
+        <div class="container__stats">
+          <ul class="container__list"></ul>
+        </div>
       </section>
 
       <!-- Ranking (account sub-section) -->
@@ -103,8 +132,8 @@
       <section id="sectionStore" class="container__section">
         <div class="container__store">
           <div class="skins"></div>
-          </div>
-          <p style="font-size: var(--size-lg); text-align: center;">
+
+          <p style="font-size: var(--size-lg); text-align: center">
             More skins after 'users accounts' update.
           </p>
         </div>
