--- a/public/play.html
+++ b/public/play.html
@@ -12,9 +12,6 @@
       rel="stylesheet"
       type="text/css"
     />
-    <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="stylesheet" href="./styles/utils.css" />
-    <link rel="stylesheet" href="./styles/components/user_interface.css" />
   </head>
   <body>
     <nav class="navbar">
@@ -26,10 +23,18 @@
       <div class="nav__ui">
         <ul class="ui__boosts ui__list">
           <li class="ui__element ui__boost">
-            <img src="./img/boosts/speed.png" alt="Speed boost" class="boost speed" />
+            <img
+              src="./img/boosts/speed.png"
+              alt="Speed boost"
+              class="boost speed"
+            />
           </li>
           <li class="ui__element ui__boost">
-            <img src="./img/boosts/pistol.png" alt="Pistol" class="boost pistol" />
+            <img
+              src="./img/boosts/pistol.png"
+              alt="Pistol"
+              class="boost pistol"
+            />
             <sup class="ammo"></sup>
           </li>
           <li class="ui__element ui__boost">
@@ -40,7 +45,11 @@
             />
           </li>
           <li class="ui__element ui__boost">
-            <img src="./img/boosts/shield.png" alt="Shield" class="boost shield" />
+            <img
+              src="./img/boosts/shield.png"
+              alt="Shield"
+              class="boost shield"
+            />
           </li>
           <li class="ui__element ui__boost">
             <img src="./img/boosts/coin.png" alt="Coins" class="boost coin" />
