--- a/index.html
+++ b/index.html
@@ -81,20 +81,20 @@
       <section id="sectionLogin" class="container__section">
         <div class="container__login">
           <div class="form-container sign-up">
-            <form>
+            <form class="registerForm">
               <h1>Create Account</h1>
               <input name="username" type="text" placeholder="Username" />
               <input name="password" type="password" placeholder="Password" />
-              <button class="signUp">Sign Up</button>
+              <button type="submit" class="signUp">Sign Up</button>
             </form>
           </div>
 
           <div class="form-container sign-in">
-            <form>
+            <form class="loginForm">
               <h1>Sign In</h1>
               <input name="username" type="text" placeholder="Username" />
               <input name="password" type="password" placeholder="Password" />
-              <button class="signIn">Sign In</button>
+              <button type="submit" class="signIn">Sign In</button>
             </form>
           </div>
 
