login and logout

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
           <li id="donate" class="btn">donate</li>
           <li id="credits" class="btn">credits</li>
         </ul>
+
+        <div class="currentUser">
+          <span>Current user: <span class="user"></span></span>
+        </div>
       </section>
 
       <!-- Keybindings -->
@@ -169,10 +173,12 @@
       <section id="sectionBack" class="container__section">
         <div class="container__back">
           <ul class="container__list">
+            <li id="logout" class="btn">logout</li>
             <li class="btn">back</li>
           </ul>
         </div>
       </section>
+
     </main>
 
     <script type="module" src="./src/main.js"></script>
