separate imports for index.html and play.html

--- a/public/play.html
+++ b/public/play.html
@@ -79,6 +79,6 @@
       <p>Click to <span class="play-again">play again</span>.</p>
     </div>
 
-    <script type="module" src="../src/main.js"></script>
+    <script type="module" src="../src/MainPlay.js"></script>
   </body>
 </html>
