--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-adsense-account" content="ca-pub-2534586073857624">
     <title>Rowerowe Narty</title>
 
     <link rel="icon" href="./img/logo.png" />
@@ -181,6 +182,6 @@
 
     </main>
 
-    <script type="module" src="./src/main.js"></script>
+    <script type="module" src="./src/MainIndex.js"></script>
   </body>
 </html>
