changes to saving user stats

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <section id="sectionMain" class="container__section">
         <ul class="container__list">
           <li id="keybindings" class="btn">play</li>
-          <li id="account" class="btn">account</li>
+          <!-- <li id="account" class="btn">account</li> -->
           <li id="store" class="btn">store</li>
           <li id="donate" class="btn">donate</li>
           <li id="credits" class="btn">credits</li>
